[package]
name = "socks5-tunnel"
version = "0.2.0"
edition = "2021"
authors = ["kai.lu@citrix.com"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/klu-dev/socks5-tunnel"
description = """
socks v5 and http proxy tunnel application based on noise encryption.
"""
categories = ["asynchronous", "network-programming"]
keywords = ["porxy", "socks", "http"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto = { path = "crypto", version = "0.1" }
anyhow = "1.0"
hex = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
x25519-dalek = { version = "1" }
futures = { version = "0.3" }
parity-multiaddr = { version = "0.11.0" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["compat"] }
log = "0.4"
env_logger = "0.9"
structopt = "0.3"
pin-project = "1"
snow = { version = "0.8", features = ["ring-accelerated"] }
httparse = "1.5"

[dev-dependencies]
memsocket = { path = "memsocket", version = "0.1" }
