[package]
name = "crypto"
version = "0.1.0"
authors = ["kail"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crypto-derive = { path = "../crypto-derive", version = "0.1" }
anyhow = "1.0"
hex = "0.4.2"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
x25519-dalek = { version = "0.6", default-features = false }

[features]
default = ["std", "u64_backend"]
std = ["x25519-dalek/std"]
u64_backend = ["x25519-dalek/u64_backend"]
